Closed
Bug 611164
Opened 15 years ago
Closed 15 years ago
Intermittent failure in 580160-1.html | reftest unexpected-fail | image comparison (==)
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Felipe, Assigned: roc)
References
Details
(Keywords: intermittent-failure)
Attachments
(4 files)
24.77 KB,
text/plain
|
Details | |
17.19 KB,
image/png
|
Details | |
625 bytes,
patch
|
Details | Diff | Splinter Review | |
3.33 KB,
patch
|
romaxa
:
review+
|
Details | Diff | Splinter Review |
WINNT 5.2 mozilla-central debug test reftest
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1289428702.1289431399.9503.gz
s: win32-slave36
REFTEST TEST-UNEXPECTED-FAIL | file:///e:/builds/moz2_slave/mozilla-central-win32-debug-unittest-reftest/build/reftest/tests/layout/reftests/bugs/580160-1.html |
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
Reporter | ||
Comment 1•15 years ago
|
||
WINNT 5.2 mozilla-central debug test reftest
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1289434160.1289437757.10210.gz
s: win32-slave17
REFTEST TEST-UNEXPECTED-FAIL | file:///e:/builds/moz2_slave/mozilla-central-win32-debug-unittest-reftest/build/reftest/tests/layout/reftests/bugs/580160-1.html |
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
PROCESS-CRASH | Main app process exited normally | application crashed (minidump found)
Comment 2•15 years ago
|
||
Even though this didn't show up on Maple (at least not while I was watching), it seems likely to be async plugins fallout.
Reporter | ||
Comment 4•15 years ago
|
||
Comment 5•15 years ago
|
||
Comment 6•15 years ago
|
||
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1289456795.1289460240.21740.gz
WINNT 5.2 mozilla-central debug test reftest on 2010/11/10 22:26:35
s: win32-slave12
Blocks: 438871
Whiteboard: [orange]
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 27•15 years ago
|
||
I don't think we need a layout flush, the harness will do that already.
This is a problem with async plugin painting. We simply haven't received the new plugin surface yet. I have a patch we can try.
Assignee | ||
Comment 28•15 years ago
|
||
This should work.
Assignee: nobody → roc
Attachment #491634 -
Flags: review?
Assignee | ||
Updated•15 years ago
|
Attachment #491634 -
Flags: review? → review?(romaxa)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 34•15 years ago
|
||
Comment on attachment 491634 [details] [diff] [review]
potential fix
is it for windows only? Fix seems make sense, but I wondering why it was working fine on linux before... did we change logic for Windows plugin layers?
Attachment #491634 -
Flags: review?(romaxa) → review+
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 36•15 years ago
|
||
Maybe we were just lucky before.
Whiteboard: [orange] → [orange][needs landing]
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•15 years ago
|
Summary: Intermittent failure in 580160-1.html | reftest unexpected-fail → Intermittent failure in 580160-1.html | reftest unexpected-fail | image comparison (==)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
![]() |
||
Comment 84•15 years ago
|
||
Pushed http://hg.mozilla.org/mozilla-central/rev/12c31d0065ca
I took the [needs landing] as a=roc.
Whiteboard: [orange][needs landing] → [orange]
Assignee | ||
Comment 85•15 years ago
|
||
That probably wasn't a safe assumption, but this was test-only (well, mostly) so I think this was OK.
This bug still needs bug 615417 though.
![]() |
||
Comment 86•15 years ago
|
||
(In reply to comment #85)
> That probably wasn't a safe assumption
Noted. It occurred to me after I'd pushed, so I thought I'd better at least note what I'd done.
Assignee | ||
Comment 87•15 years ago
|
||
This should be fixed now that this patch and the patch in bug 615417 have landed.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Keywords: intermittent-failure
Updated•13 years ago
|
Whiteboard: [orange]
You need to log in
before you can comment on or make changes to this bug.
Description
•