Bug 611164. Fire MozPaintWait event if async plugin rendering hasn't caught up with our desired plugin size. r=romaxa a=roc